works look fixed on mobile

--- a/src/Pages/Works/works.css
+++ b/src/Pages/Works/works.css
@@ -144,6 +144,7 @@
   .works-3,
   .works-4 {
     width: 95vw;
+    height: 70vh;
   }
 
   .left-side {
